virtual thread for component pin manager